@@ -21,15 +21,13 @@ define( function( require ) {
   function DrainFaucetNode( faucet, mvt ) {
 
     var scale = 0.6;
-    var tapToDispenseAmount = Math.pow( 10, -PHScaleConstants.VOLUME_DECIMAL_PLACES ); // L
-    var tapToDispenseInterval = 500; // ms
 
     var horizontalPipeLength = Math.abs( mvt.modelToViewX( faucet.location.x - faucet.pipeMinX ) ) / scale;
     FaucetNode.call( this, faucet.maxFlowRate, faucet.flowRateProperty, faucet.enabledProperty, {
       horizontalPipeLength: horizontalPipeLength,
       verticalPipeLength: 5,
-      tapToDispenseFlowRate: tapToDispenseAmount / ( tapToDispenseInterval / 1000 ), // L/sec
-      tapToDispenseInterval: tapToDispenseInterval
+      tapToDispenseFlowRate: PHScaleConstants.TAP_TO_DISPENSE_AMOUNT / ( PHScaleConstants.TAP_TO_DISPENSE_INTERVAL / 1000 ), // L/sec
+      tapToDispenseInterval: PHScaleConstants.TAP_TO_DISPENSE_INTERVAL
     } );
     this.translation = mvt.modelToViewPosition( faucet.location );
     this.setScaleMagnitude( -scale, scale ); // reflect
