@@ -1,3 +1,4 @@
+2/12/14 change tap-to-dispense parameters: dispense 0.05L for 333 ms
 2/12/14 lighten color of pH probe from RGB(80,80,80) to RGB(140,140,140)
 2/12/14 new screen names: Basics -> Macro, Solutions -> Micro
 2/12/14 new icon for 'Custom' screen
